@@ -1,3 +1,17 @@
+// Copyright 2004-2009 Castle Project - http://www.castleproject.org/
+// 
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+// 
+//     http://www.apache.org/licenses/LICENSE-2.0
+// 
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
 namespace NVelocity.Test
 {
 	using System;
@@ -76,6 +90,8 @@ namespace NVelocity.Test
 			Hashtable h = new Hashtable();
 			h.Add("foo", "bar");
 			c.Put("hashtable", h);
+			c.Put("EnumData", typeof(EnumData));
+			c.Put("enumValue", EnumData.Value2);
 
 			AddressData address = new AddressData();
 			address.Address1 = "9339 Grand Teton Drive";
@@ -126,6 +142,18 @@ namespace NVelocity.Test
 			s = sw.ToString();
 			Assert.AreEqual(String.Empty, s, "test key not found in context");
 
+			sw = new StringWriter();
+			ok = Velocity.Evaluate(c, sw, string.Empty, "#if($enumValue == \"Value2\")equal#end");
+			Assert.IsTrue(ok, "Evaluation returned failure");
+			s = sw.ToString();
+			Assert.AreEqual("equal", s);
+
+			sw = new StringWriter();
+			ok = Velocity.Evaluate(c, sw, string.Empty, "#if($enumValue == $EnumData.Value2)equal#end");
+			Assert.IsTrue(ok, "Evaluation returned failure");
+			s = sw.ToString();
+			Assert.AreEqual("equal", s);
+
 			// test nested properties where property not found
 			//	    sw = new StringWriter();
 			//	    template = "These are the non-existent nested properties:\naddr1=$contact.Address.Address1.Foo\naddr2=$contact.Bar.Address.Address2";
@@ -134,7 +162,6 @@ namespace NVelocity.Test
 			//	    s = sw.ToString();
 			//	    Assert("test nested properties where property not found", s.Equals("These are the non-existent nested properties:\naddr1=\naddr2="));
 		}
-
 
 		// inner classes to support tests --------------------------
 
@@ -172,6 +199,13 @@ namespace NVelocity.Test
 				get { return address2; }
 				set { address2 = value; }
 			}
+		}
+
+		public enum EnumData
+		{
+			Value1,
+			Value2,
+			Value3
 		}
 	}
 }
